--- a/.github/workflows/preview.yml
+++ b/.github/workflows/preview.yml
@@ -67,19 +67,25 @@ jobs:
         version_ge() { [ "$(printf '%s\n%s\n' "$2" "$1" | sort -V | head -n1)" = "$2" ]; };
         version_le() { [ "$(printf '%s\n%s\n' "$1" "$2" | sort -V | head -n1)" = "$1" ]; };
         
-        if [ "$OS_NAME" = "darwin" ] && version_ge "$HUGO_VERSION" "0.102.0"; then
-          ARCH_NAME="universal"
+        if [ "$OS_NAME" = "darwin" ] && version_le "$HUGO_VERSION" "0.80.0" && [ "$ARCH_NAME" = "arm64" ]; then
+          echo "WARNING: You're using an unsupported version of Hugo on macOS ARM64. You will install the AMD64 version of Hugo, which may cause incompatibility and performance issues when running it."
+          echo "If you have issues when running it with any reason, please consider using a newer version of Hugo which supports ARM64 natively (starts from 0.81.0) or use another runner image that using AMD64 architecture."
+          ARCH_NAME="amd64"
         fi
         
         if [ "$OS_NAME" = "windows" ]; then
           FILE_FORMAT="zip"
+        elif [ "$OS_NAME" = "darwin" ] && version_ge "$HUGO_VERSION" "0.153.0"; then
+          FILE_FORMAT="pkg"
         else
           FILE_FORMAT="tar.gz"
         fi
         
         if [ "$IS_EXTENDED" = true ] && version_ge "$HUGO_VERSION" "0.43" && \
-        { [ "$OS_NAME" = "linux" ] || [ "$OS_NAME" = "darwin" ] || [ "$OS_NAME" = "windows" ]; }; then
+        { [ "$OS_NAME" = "linux" ] || [ "$OS_NAME" = "darwin" ] || [ "$OS_NAME" = "windows" ]; } && \
+        { [ "$ARCH_NAME" = "amd64" ] || [ "$ARCH_NAME" = "arm64" ]; }; then
           HUGO_EXTENDED="_extended"
+          
           if [ "$IS_WITHDEPLOY" = true ] && version_ge "$HUGO_VERSION" "0.137.1"; then
             HUGO_EXTENDED="_extended_withdeploy"
           elif [ "$IS_WITHDEPLOY" = true ] && version_ge "$HUGO_VERSION" "0.137.0" && \
@@ -89,8 +95,24 @@ jobs:
               HUGO_EXTENDED="_extended"
             fi
           fi
+          
+          if [ "$ARCH_NAME" = "arm64" ] && [ "$OS_NAME" = "linux" ] && version_le "$HUGO_VERSION" "0.102.0"; then
+            HUGO_EXTENDED=""
+          fi
+          
+          if [ "$ARCH_NAME" = "arm64" ] && [ "$OS_NAME" = "windows" ]; then
+            HUGO_EXTENDED=""
+          fi
         else
           HUGO_EXTENDED=""
+        fi
+        
+        if [ "$OS_NAME" = "darwin" ] && [ "$HUGO_VERSION" = "0.89.0" ]; then
+          ARCH_NAME="all"
+        fi
+        
+        if [ "$OS_NAME" = "darwin" ] && version_ge "$HUGO_VERSION" "0.102.0"; then
+          ARCH_NAME="universal"
         fi
         
         if version_le "$HUGO_VERSION" "0.102.3"; then
@@ -122,18 +144,20 @@ jobs:
         fi
         
         HUGO_FILENAME="hugo${HUGO_EXTENDED}_${HUGO_VERSION}_${OS_NAME}-${ARCH_NAME}.${FILE_FORMAT}"
-        WORKDIR="${RUNNER_TEMP}/hugo-install"; mkdir -p "${WORKDIR}"; cd "${WORKDIR}"
+        WORKDIR="${RUNNER_TEMP}/hugo-install"; mkdir -p "$WORKDIR"; cd "$WORKDIR"
         aria2c -c -j 16 -x 16 -s 16 -UMozilla/5.0 https://github.com/gohugoio/hugo/releases/download/v${HUGO_VERSION}/${HUGO_FILENAME}
-        mkdir -p "${GITHUB_WORKSPACE}/bin"
+        mkdir -p "${GITHUB_WORKSPACE}/bin/hugo"
         
         if [ "$OS_NAME" = "windows" ]; then
-          7z x ${HUGO_FILENAME} -o"${GITHUB_WORKSPACE}/bin"
+          7z x ${HUGO_FILENAME} -o"${GITHUB_WORKSPACE}/bin/hugo"
+        elif [ "$OS_NAME" = "darwin" ] && version_ge "$HUGO_VERSION" "0.153.0"; then
+          sudo installer -pkg "${HUGO_FILENAME}" -target /Applications
         else
-          7z x -tgzip -so ${HUGO_FILENAME} | 7z x -si -ttar -o"${GITHUB_WORKSPACE}/bin"
-          chmod +x "${GITHUB_WORKSPACE}/bin/hugo"          
+          7z x -tgzip -so ${HUGO_FILENAME} | 7z x -si -ttar -o"${GITHUB_WORKSPACE}/bin/hugo"
+          chmod +x "${GITHUB_WORKSPACE}/bin/hugo/hugo"
         fi
         
-        echo "${GITHUB_WORKSPACE}/bin" >> $GITHUB_PATH
+        echo "${GITHUB_WORKSPACE}/bin/hugo" >> $GITHUB_PATH
         rm -rf "${WORKDIR}"
         cd ${GITHUB_WORKSPACE}
     
@@ -143,15 +167,10 @@ jobs:
       run: |
         OS_NAME=$(go env GOOS)
         ARCH_NAME=$(go env GOARCH)
+        FILE_FORMAT="tar.gz"
         
         if [ "$OS_NAME" = "darwin" ]; then
           OS_NAME="macos"
-        fi
-        
-        if [ "$OS_NAME" = "windows" ]; then
-          FILE_FORMAT="zip"
-        else
-          FILE_FORMAT="tar.gz"
         fi
         
         if [ "$ARCH_NAME" = "amd64" ]; then
@@ -168,20 +187,19 @@ jobs:
           DART_SASS_VERSION="$(curl -s https://api.github.com/repos/sass/dart-sass/releases/latest | grep tag_name | cut -d 'v' -f2 | cut -d'"' -f4)"
         fi
         
-        DART_SASS_FILENAME="dart-sass-${DART_SASS_VERSION}-${OS_NAME}-${ARCH_NAME}${DART_SASS_MUSL}.${FILE_FORMAT}"
-        WORKDIR="${RUNNER_TEMP}/dart-install"; mkdir -p "${WORKDIR}"; cd "${WORKDIR}"
-        aria2c -c -j 16 -x 16 -s 16 -UMozilla/5.0 https://github.com/sass/dart-sass/releases/download/${DART_SASS_VERSION}/${DART_SASS_FILENAME}
-        mkdir -p "${GITHUB_WORKSPACE}/bin"
-        
         if [ "$OS_NAME" = "windows" ]; then
-          7z x ${DART_SASS_FILENAME} -o"${GITHUB_WORKSPACE}/bin"
+          choco install sass --version ${DART_SASS_VERSION}
         else
+          DART_SASS_FILENAME="dart-sass-${DART_SASS_VERSION}-${OS_NAME}-${ARCH_NAME}${DART_SASS_MUSL}.${FILE_FORMAT}"
+          WORKDIR="${RUNNER_TEMP}/dart-install"; mkdir -p "${WORKDIR}"; cd "${WORKDIR}"
+          aria2c -c -j 16 -x 16 -s 16 -UMozilla/5.0 https://github.com/sass/dart-sass/releases/download/${DART_SASS_VERSION}/${DART_SASS_FILENAME}
+          mkdir -p "${GITHUB_WORKSPACE}/bin"
           7z x -tgzip -so ${DART_SASS_FILENAME} | 7z x -si -ttar -o"${GITHUB_WORKSPACE}/bin"
           chmod +x "${GITHUB_WORKSPACE}/bin/dart-sass/sass"
+          chmod +x "${GITHUB_WORKSPACE}/bin/dart-sass/src/dart"
+          echo "${GITHUB_WORKSPACE}/bin/dart-sass" >> $GITHUB_PATH
+          rm -rf "${WORKDIR}"
         fi
-        
-        echo "${GITHUB_WORKSPACE}/bin/dart-sass" >> $GITHUB_PATH
-        rm -rf "${WORKDIR}"
 
     - name: Verify Installations
       run: |
